--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,29 @@ find_package(Python 3 COMPONENTS Interpreter Development.Module REQUIRED)
 
 find_package(pybind11 CONFIG REQUIRED)
 
+# -------------------------- Includes ------------------------------------------
+
+include_directories("src")
 include_directories("ParlayANN/parlaylib/include")
 include_directories("ParlayANN")
 
-pybind11_add_module(window_ann python_bindings/python_bindings.cpp)
+# -------------------------- Options ------------------------------------------
+
+set(COMPILE_OPTIONS
+
+    $<$<CONFIG:Debug>:-std=c++17 -DPARLAY_SEQUENTIAL -mcx16 -pthread -march=native -g -O0 -DDEBUG -fPIC>
+    
+    $<$<CONFIG:RelWithDebInfo>:-std=c++17 -O3 -DHOMEGROWN -mcx16 -pthread -march=native -DNDEBUG -fPIC -g>
+
+    $<$<CONFIG:Release>:-std=c++17 -O3 -DHOMEGROWN -mcx16 -pthread -march=native -DNDEBUG -fPIC>
+)
+
+
+# --------------------- Create Python Library --------------------------------------
+
+set(CC_SOURCES
+    python_bindings/python_bindings.cpp
+    )
+
+pybind11_add_module(window_ann  ${CC_SOURCES})
+target_compile_options(window_ann PRIVATE ${COMPILE_OPTIONS})
