--- a/experiments/docker-compose.yml
+++ b/experiments/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     environment:
       ETCD_ENDPOINTS: etcd:2379
       MINIO_ADDRESS: minio:9000
+      OMP_NUM_THREADS: 16
     volumes:
       - /home/ubuntu/milvus.yaml:/milvus/configs/milvus.yaml   # Map the local path to the container path
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/milvus:/var/lib/milvus
