--- a/experiments/milvus.yaml
+++ b/experiments/milvus.yaml
@@ -353,7 +353,7 @@ indexCoord:
 indexNode:
   scheduler:
     buildParallel: 1
-  enableDisk: false # enable index node build disk vector index
+  enableDisk: true # enable index node build disk vector index
   maxDiskUsagePercentage: 95
   # can specify ip for example
   # ip: 127.0.0.1
