--- a/experiments/docker-compose.yml
+++ b/experiments/docker-compose.yml
@@ -1,43 +1,6 @@
 version: '3.5'
 
 services:
-  etcd:
-    container_name: milvus-etcd
-    image: quay.io/coreos/etcd:v3.5.5
-    environment:
-      - ETCD_AUTO_COMPACTION_MODE=revision
-      - ETCD_AUTO_COMPACTION_RETENTION=1000
-      - ETCD_QUOTA_BACKEND_BYTES=4294967296
-      - ETCD_SNAPSHOT_COUNT=50000
-    volumes:
-      - /home/ubuntu/milvus.yaml:/milvus/configs/milvus.yaml   # Map the local path to the container path
-      - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/etcd:/etcd
-    command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
-    healthcheck:
-      test: ["CMD", "etcdctl", "endpoint", "health"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-
-  minio:
-    container_name: milvus-minio
-    image: minio/minio:RELEASE.2023-03-20T20-16-18Z
-    environment:
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
-    ports:
-      - "9001:9001"
-      - "9000:9000"
-    volumes:
-      - /home/ubuntu/milvus.yaml:/milvus/configs/milvus.yaml   # Map the local path to the container path
-      - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/minio:/minio_data
-    command: minio server /minio_data --console-address ":9001"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-
   standalone:
     container_name: milvus-standalone
     image: milvusdb/milvus:v2.3.5
@@ -49,7 +12,7 @@ services:
       MINIO_ADDRESS: minio:9000
       OMP_NUM_THREADS: 16
     volumes:
-      - /home/ubuntu/milvus.yaml:/milvus/configs/milvus.yaml   # Map the local path to the container path
+      - /home/jae/milvus.yaml:/milvus/configs/milvus.yaml   # Map the local path to the container path
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/milvus:/var/lib/milvus
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
@@ -63,6 +26,10 @@ services:
     depends_on:
       - "etcd"
       - "minio"
+    deploy:
+      resources:
+        limits:
+          cpus: 16
 
 networks:
   default:
